@@ -59,6 +59,7 @@ Mejorado ZX Vision:
 - Mejorar movimiento del cursor en menús al pulsar PgDn/PgUp
 - Avisar en la marca de redimensionado cuando una ventana se tiene que aumentar de tamaño (porque hay texto mas allá del tamaño actual)
 - El Process switcher se ubica en la parte izquierda-abajo de la pantalla por defecto
+- Permitir boton derecho en iconos de dispositivos
 
 Mejorado ZX Desktop:
 - Permitir activar/desactivar botones superiores e inferiores de manera independiente
